# InsightFlow

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: chat.py  conversations.py  health.py  models.py  upload.py
app/chat/: chat_service.py  context_builder.py  llm.py  prompts.py
app/database/: collections.py  config.py  connection.py  conversation_repository.py  document_repository.py  knowledge_unit_repository.py  message_repository.py
app/document_store/: manager.py  pipeline.py
app/embeddings/: embedder.py  models.py  vector_store.py
app/knowledge_units/: builder.py  models.py  pipeline.py  section_builder.py  section_merger.py  section_splitter.py  splitter.py
app/llm/: generator.py  prompt_builder.py
app/models/: document.py
app/okf/: __init__.py  adapter.py  graph_merger.py  ontology.py  prompts.py  query_engine.py  retrieval.py  schemas.py  section_builder.py  storage.py
app/okf/extractor/: __init__.py  exceptions.py  extractor.py  graph_builder.py  llm.py  parser.py  validator.py
app/parsers/: csv_parser.py  docx_parser.py  excel_parser.py  markdown_parser.py  pdf_parser.py  router.py  txt_parser.py
app/processors/: cleaner.py  pipeline.py  statistics.py
app/retrieval/: pipeline.py  retriever.py
frontend/: app.py  client.py  theme.py  ui.py
